<resources>
    <string name="app_name">Fuel Queue Manager</string>
    <string name="login">Login</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_user">Email</string>
    <string name="text_no_account">Don\'t have an account? Register</string>
    <string name="img_content_login">Login activity image</string>
    <string name="register">Register</string>
    <string name="text_have_account">Already have an account? Login</string>
    <string name="hint_station_name">Station name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="label_fuel_station">Fuel Station</string>
    <string name="label_vehicle">Vehicle</string>
    <string name="hint_v_owner_name">Vehicle Owner name</string>
    <string name="hint_v_no">Vehicle Number</string>
    <string name="spinner_content_desc">Select fuel type</string>
    <string name="my_profile">Profile</string>
    <string name="back_button">back button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="label_fuel_type">Fuel Type</string>
    <string name="near_by_stations">Near by stations</string>
    <string name="seach_location">Search by Location</string>
    <string name="station_main_label">Fuel Queue Status</string>
    <string name="f_arrived">Fuel Arrived</string>
    <string name="f_finished">Fuel Finished</string>
    <string name="fuel_status_label">Fuel Status</string>
    <string name="average_waiting_time">Average Waiting Time: 1h</string>
    <string name="avg_wt_time_label">Average Waiting Time</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="petrolQ">00</string>
    <string name="dieselQ">10</string>
    <string name="avg_waiting_time">00:00</string>
    <string name="station_location">Location</string>
    <string name="update_your_status">Update Your Status</string>
    <string name="check_out">Check Out</string>
    <string name="check_in">Check In</string>
    <string name="register_no">Register No</string>
    <string name="v_name">John Doe</string>
    <string name="v_no">RF-34525</string>
    <string name="v_f_type">Petrol</string>
    <string-array name="fuel_types">
        <item>Fuel Type</item>
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
</resources>