<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".VehicleOwnerProfile">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_profile"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/InnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/regImg"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/img_content_login"
                tools:srcCompat="@drawable/by_my_car_pana" />

            <TextView
                android:id="@+id/vOwnerLabel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/hint_v_owner_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vehicleOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/v_name"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/vNoLabel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/hint_v_no"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/v_no"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/vFuelTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/label_fuel_type"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/regVehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/v_f_type" />

            <Button
                android:id="@+id/editVehicleOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/edit_profile"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>