<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".StationOwnerMain">

<!--    Fuel Status-->
    <LinearLayout
        android:id="@+id/fuel_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mainUiLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/fuel_status_label"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/arrived_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/f_arrived" />

            <Button
                android:id="@+id/finished_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/f_finished" />
        </LinearLayout>

    </LinearLayout>

<!--    Station Status-->
    <LinearLayout
        android:id="@+id/station_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stationUiLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/station_main_label"
            android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/fuelQueue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/petrolQueueCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/petrolVehicles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/petrolQ"
                        android:textSize="60sp" />

                    <TextView
                        android:id="@+id/petrol"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/petrol"
                        android:gravity="center"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dieselQueueCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dieselVehicles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/dieselQ"
                        android:textSize="60sp" />

                    <TextView
                        android:id="@+id/diesel"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/diesel"
                        android:gravity="center"
                        android:textSize="20sp" />

                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>