<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".StationProfile">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_profile"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/InnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/regImg"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/img_content_login"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/stationNameLabel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/hint_station_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/hint_station_name"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/stationAddressLabel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/hint_address"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/hint_address"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/editStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="@string/edit_profile"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>