<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".StationDetails">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/back_button"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/stationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hint_station_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hint_address"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/waitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/average_waiting_time"
                android:textSize="20sp" />

            <!--    Availability-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/petrolAvailability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/holo_red_dark"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/petrol"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dieselAvailability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/holo_green_dark"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/diesel"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--    Queue Status-->
            <LinearLayout
                android:id="@+id/station_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stationUiLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/station_main_label"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/fuelQueue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/petrolQueueCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/petrolVehicles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/petrolQ"
                            android:textSize="60sp" />

                        <TextView
                            android:id="@+id/petrol"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/petrol"
                            android:gravity="center"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dieselQueueCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dieselVehicles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/dieselQ"
                            android:textSize="60sp" />

                        <TextView
                            android:id="@+id/diesel"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/diesel"
                            android:gravity="center"
                            android:textSize="20sp"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--    Check in/out Status-->
            <LinearLayout
                android:id="@+id/checkin_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mainUiLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/update_your_status"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/checkin_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:padding="20dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/check_in" />

                    <Button
                        android:id="@+id/checkout_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:padding="20dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/check_out" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
